# ADJO

./: .gitignore  00_LIRE_D_ABORD.md  ANALYSE_ET_CORRECTIONS.md  CHECKLIST_COMPLETE.md  CORRECTIONS_CRITIQUES.md  ERREURS_COMMUNES.md  GUIDE_COMPLET.md  INDEX.md  INTEGRATION_MAIN.dart  MODIFICATIONS.md  PRIORITES_RESTANTES.md  QUICK_START.md  README.md  README_AMELIORATIONS.md  README_MODIFICATIONS.md  RECAP_FINAL.md  UI_VISUELLE.md  pubspec.yaml
android/app/: build.gradle.kts
backend/: .env.example  .gitignore  Adjo_API.postman_collection.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  docker-compose.yml
backend/migrations/: 001_create_users.sql  002_create_auth_tables.sql  003_create_boxes.sql  004_create_communities.sql  005_create_tontines.sql  006_create_faq_and_notifications.sql
backend/scripts/: init_db.sh  run_migrations.sh
backend/src/: main.rs  router.rs
backend/src/config/: app.rs  database.rs  mod.rs
backend/src/errors/: app_error.rs  mod.rs
backend/src/handlers/: health.rs  mod.rs
backend/src/middleware/: mod.rs
backend/src/models/: common.rs  mod.rs
backend/src/services/: mod.rs
backend/src/utils/: mod.rs
blockchain/: README.md
docs/: cahier-de-charges.md
frontend/: README.md  pubspec.yaml
frontend/lib/: app_router.dart  main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
lib/: main.dart
lib/Login/: loginpage.dart  logsig.dart  signpage.dart
lib/homeFqa/: community.dart  homedemo.dart
windows/: CMakeLists.txt
windows/runner/: main.cpp  (+1 more)
(+82 files in other folders)
